--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -56,14 +56,15 @@ ul li {
   border-radius: 20px;
   display: flex;
   cursor: pointer;
-  width: 160px;
+  width: 170px;
 }
 ul li p {
   position: relative;
   top: 3px;
   left: 5px;
 }
-ul li:hover {
+ul li:hover,
+ul li.active-option {
   background-color: purple;
   color: white;
   transition: 0.2s;
@@ -73,6 +74,8 @@ ul li:hover {
   overflow-y: auto;
   border-radius: 20px;
   width: 160px;
+  position: relative;
+  right: 10px;
   margin: auto;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.769);
   &::-webkit-scrollbar {
@@ -145,6 +148,9 @@ ul li:hover {
   #options,
   #main-heading {
     transition: 0.5s;
+  }
+  #special-options {
+    right: 0px;
   }
 }
 @media screen and (max-width: 665px) {
