--- a/src/pages/showProducts/showProducts.scss
+++ b/src/pages/showProducts/showProducts.scss
@@ -56,12 +56,14 @@
   overflow: auto;
 }
 #show-product-card {
-  border: 1px solid purple;
+  border: 2px solid purple;
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
   height: fit-content;
   width: 280px;
+  background-color: white;
+  box-shadow: 10px 2px 10px rgba(0, 0, 0, 0.402);
 }
 #show-pro-edit-btn {
   background-color: navy;
@@ -80,6 +82,35 @@
   color: blue;
   font-size: 17px;
   font-weight: 700;
+}
+#show-pro-edit-form{
+  border: 2px solid purple;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  form{
+    display: flex;
+    flex-direction: column;
+    button{
+      width: fit-content;
+      margin: auto;
+      padding: 5px 10px;
+      background-color: purple;
+      color: white;
+      outline: none;
+      border: none;
+      cursor: pointer;
+    }
+  input{
+    outline: none;
+    border: none;
+    border: 1px solid black;
+    padding: 5px 10px;
+    font-size: 16px;
+    margin: 10px;
+  }
+  }
 }
 @media screen and (max-width: 1200px) {
   #show-products-list {
