--- a/src/pages/addProducts/addproducts.scss
+++ b/src/pages/addProducts/addproducts.scss
@@ -51,7 +51,7 @@ h1 {
 #add-pro-notification {
   position: absolute;
   top: 0;
-  background-color: purple;
+  background-color: navy;
   color: white;
   padding: 30px;
   font-size: 20px;
