--- a/src/pages/SideBar/style.scss
+++ b/src/pages/SideBar/style.scss
@@ -1,6 +1,6 @@
 .navbar {
   padding: 10px 40px;
-  background-color: purple;
+  background-color: rgb(0, 0, 65);
   color: white;
 }
 #side-bar {
@@ -14,7 +14,7 @@
   height: 500px;
   margin: auto;
   width: 70vw;
-  margin-left: 50px;
+  margin-left: 70px;
   background: rgba(87, 87, 87, 0.1);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
@@ -27,9 +27,10 @@
 #sidebar_fully_outer {
   width: 300px;
   display: flex;
-  border-right: 2px solid purple;
+  border-right: 2px solid navy;
   height: fit-content;
   flex-direction: column;
+  background-color: rgba(87, 87, 87, 0.1);
 }
 #options {
   &::-webkit-scrollbar {
@@ -65,13 +66,48 @@ ul li p {
 }
 ul li:hover,
 ul li.active-option {
-  background-color: purple;
+  background-color: navy;
   color: white;
   transition: 0.2s;
 }
 #more-options-btn {
   display: none;
 }
+#logout-confirm-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.logout-dialog {
+  background: #fff;
+  padding: 20px 30px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+.logout-buttons {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.logout-buttons button {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1200px) {
   #side-bar {
     width: 100%;
@@ -116,7 +152,7 @@ ul li.active-option {
     width: 83%;
     margin-left: -18%;
     z-index: 1;
-    border: 2px solid purple;
+    border: 2px solid navy;
     padding: 1rem;
     transition: all 0.3s ease-in-out;
   }
