--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -5,7 +5,7 @@
   height: 100px;
 }
 #dashboard-shop-name {
-  border-bottom: 2px solid purple;
+  border-bottom: 2px solid navy;
   width: fit-content;
   padding: 0px 10px;
   height: 45px;
@@ -50,7 +50,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: purple;
+  background-color: navy;
   font-size: 20px;
   cursor: pointer;
 }
